# causal_inference

./: .gitignore  README.md  df_max_sales.pkl  pyproject.toml  testScriptMultiSynthControlSVD.py  test_mrsc_food_cats.py  test_notebook.py  test_notebook_walmart.py  walmart_to_pickle.py
tslib/src/synthcontrol/: multisyntheticControl.py  syntheticControl.py
