[tool.poetry]
name = "tslib"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.2"
sklearn = "^0.0"
numpy = "^1.18.1"
scipy = "^1.4.1"
matplotlib = "^3.2.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
